--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "stripe": "^16.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
