--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.2.4",
     "@stripe/stripe-js": "^4.1.0",
     "lucide-react": "^0.408.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
